功能修改，绑定用户信息功能
