# swagger/swagger.yml
@@ -241,12 +241,12 @@ paths:
       operationId: UserController.Login
       parameters:
       - in: formData
-        name: username
+        name: userName
         description: The username for login
         required: true
         type: string
       - in: formData
-        name: password
+        name: passWord
         description: The password for login
         required: true
         type: string
